--- a/MitigatingCircumstances/package.json
+++ b/MitigatingCircumstances/package.json
@@ -1,8 +1,21 @@
 {
+  "version": "1.0.0",
+  "name": "asp.net",
+  "private": true,
+  "devDependencies": {
+    "gulp-clean-css": "^3.10.0",
+    "gulp-minify": "^3.1.0"
+  },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "@fortawesome/fontawesome-free": "^5.4.1",
+    "bootstrap": "^4.1.3",
+    "code-prettify": "^0.1.0",
+    "gulp": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-install": "^1.1.0",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.17.0",
-    "jquery-validation-unobtrusive": "^3.2.10"
+    "jquery-validation-unobtrusive": "^3.2.10",
+    "popper.js": "^1.14.4"
   }
 }
