* Added repository dependencies * Creating models

--- a/MitigatingCircumstances/appsettings.json
+++ b/MitigatingCircumstances/appsettings.json
@@ -8,7 +8,7 @@
     }
   },
   "Google": {
-    "ProjectId": "",
+    "ProjectId": "future-system-219911",
     "ErrorReporting": {
       "ServiceName": "MitigatingCircumstances",
       "Version": "1.0.0"
