--- a/MitigatingCircumstances/package.json
+++ b/MitigatingCircumstances/package.json
@@ -13,6 +13,7 @@
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-install": "^1.1.0",
+    "gulp-run-command": "0.0.9",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.17.0",
     "jquery-validation-unobtrusive": "^3.2.10",
