--- a/MitigatingCircumstances/appsettings.json
+++ b/MitigatingCircumstances/appsettings.json
@@ -13,5 +13,11 @@
       "ServiceName": "MitigatingCircumstances",
       "Version": "1.0.0"
     }
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "8253497308-j2d2jmuovrta010gbksg0ucb3qlv70p3.apps.googleusercontent.com",
+      "ClientSecret": "EDS2AQ8_baYBYvDekctXRqWI"
+    }
   }
 }
