--- a/MitigatingCircumstances/package.json
+++ b/MitigatingCircumstances/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "devDependencies": {
     "gulp-clean-css": "^3.10.0",
-    "gulp-minify": "^3.1.0"
+    "gulp-minify": "^3.1.0",
+    "gulp-watch": "^5.0.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.1",
