--- a/MitigatingCircumstances/appsettings.json
+++ b/MitigatingCircumstances/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -19,5 +19,8 @@
       "ClientId": "8253497308-j2d2jmuovrta010gbksg0ucb3qlv70p3.apps.googleusercontent.com",
       "ClientSecret": "EDS2AQ8_baYBYvDekctXRqWI"
     }
+  },
+  "ConnectionStrings": {
+    "GoogleCloudSql": "Server=35.241.130.144;Database=app;Uid=cloud;Password=UXbkBrFh4DknMtp"
   }
 }
