--- a/MitigatingCircumstances/appsettings.json
+++ b/MitigatingCircumstances/appsettings.json
@@ -18,6 +18,10 @@
     "Google": {
       "ClientId": "8253497308-j2d2jmuovrta010gbksg0ucb3qlv70p3.apps.googleusercontent.com",
       "ClientSecret": "EDS2AQ8_baYBYvDekctXRqWI"
+    },
+    "Microsoft": {
+      "ApplicationId": "074a381e-8b7e-4e80-8110-18c810e69537",
+      "Password": "jatiSAT9*~uoyHIFV6529|)"
     }
   },
   "ConnectionStrings": {
