--- a/MitigatingCircumstances/appsettings.json
+++ b/MitigatingCircumstances/appsettings.json
@@ -25,6 +25,7 @@
     }
   },
   "ConnectionStrings": {
-    "GoogleCloudSql": "Server=35.241.130.144;Database=app;Uid=cloud;Password=UXbkBrFh4DknMtp"
+    "GoogleCloudMySql": "Server=35.241.130.144;Database=app;Uid=cloud;Password=UXbkBrFh4DknMtp",
+    "LocalMsSqlServer": "Server=DESKTOP-IJL782E\\SQLEXPRESS;Database=MitigatingCircumstances;User Id=mitigating;Password=Pa55word;"
   }
 }
