* Added send grid mail service

--- a/MitigatingCircumstances/appsettings.json
+++ b/MitigatingCircumstances/appsettings.json
@@ -27,5 +27,8 @@
   "ConnectionStrings": {
     "GoogleCloudMySql": "Server=35.241.130.144;Database=app;Uid=cloud;Password=UXbkBrFh4DknMtp",
     "LocalMsSqlServer": "Server=DESKTOP-IJL782E\\SQLEXPRESS;Database=MitigatingCircumstances;User Id=mitigating;Password=Pa55word;"
+  },
+  "Mail": {
+    "SendGridApiKey": "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"
   }
 }
