* Added a review extension page

--- a/MitigatingCircumstances/MitigatingCircumstances.csproj
+++ b/MitigatingCircumstances/MitigatingCircumstances.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="MailTemplates\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
