--- a/MitigatingCircumstances/package.json
+++ b/MitigatingCircumstances/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.3.1",
     "jquery-validation": "^1.17.0",
     "jquery-validation-unobtrusive": "^3.2.10",
-    "popper.js": "^1.14.4"
+    "popper.js": "^1.14.4",
+    "vue": "^2.5.21"
   }
 }
